--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,19 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body ng-app="tally25">
+
     <div class="header">
       <h1>25</h1>
       <i class="fa fa-plus-square" aria-hidden="true"></i>
     </div>
+
+    <div ui-view></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/factories.js"></script>
+
   </body>
 </html>
