--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
   </head>
   <body ng-app="tally25">
 
-    <div class="header">
+    <add-tally></add-tally>
+
+    <div class="header" ng-controller="headerCtrl as ctrl">
       <h1>25</h1>
-      <i class="fa fa-plus-square" aria-hidden="true"></i>
+      <i class="fa fa-plus-square" aria-hidden="true" ng-click="ctrl.addTally()"></i>
     </div>
 
     <div ui-view></div>
