new tasks are added to view

--- a/public/directives/tally.html
+++ b/public/directives/tally.html
@@ -1,4 +1,4 @@
-<div class="tally color-purple">
+<div class="tally" ng-class="data.color">
   <i class="fa fa-info-circle" aria-hidden="true" ng-click="ctrl.showInfo(data.id)"></i>
   <div class="info" ng-if="ctrl.showingInfo[data.id]">
     <i class="fa fa-clock-o" aria-hidden="true"></i>
