--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body ng-app="tally25">
 
     <add-tally></add-tally>
+    <edit-tally></edit-tally>
 
     <div class="header" ng-controller="headerCtrl as ctrl">
       <h1>25</h1>
