--- a/public/directives/tally.html
+++ b/public/directives/tally.html
@@ -1,9 +1,9 @@
 <div class="tally" ng-class="data.color">
-  <i class="fa fa-info-circle" aria-hidden="true" ng-click="ctrl.showInfo(data.id)"></i>
-  <div class="info" ng-if="ctrl.showingInfo[data.id]">
+  <i class="fa fa-info-circle" aria-hidden="true" ng-click="singleCtrl.showInfo(data.id)"></i>
+  <div class="info" ng-if="singleCtrl.showingInfo[data.id]">
     <i class="fa fa-clock-o" aria-hidden="true"></i>
     <i class="fa fa-bar-chart" aria-hidden="true"></i>
-    <i class="fa fa-pencil" aria-hidden="true" ng-click="ctrl.editTally(data.id)"></i>
+    <i class="fa fa-pencil" aria-hidden="true" ng-click="singleCtrl.editTally(data)"></i>
   </div>
   <h2>{{data.task}}</h2>
   <div class="tally-num">
