--- a/public/directives/tally.html
+++ b/public/directives/tally.html
@@ -7,8 +7,8 @@
   </div>
   <h2>{{data.task}}</h2>
   <div class="tally-num">
-    <i class="fa fa-minus-circle" aria-hidden="true"></i>
+    <i class="fa fa-minus-circle" aria-hidden="true" ng-click="singleCtrl.decrement()"></i>
     <span>{{singleCtrl.getToday(data.tallies)}}</span>
-    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+    <i class="fa fa-plus-circle" aria-hidden="true" ng-click="singleCtrl.increment()"></i>
   </div>
 </div>
