--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
 
     <add-tally></add-tally>
     <edit-tally></edit-tally>
-    
+    <task-timer></task-timer>
+    <!-- <task-data></task-data> -->
+
     <div class="header" ng-controller="headerCtrl as ctrl">
       <h1>25</h1>
       <i class="fa fa-plus-square" aria-hidden="true" ng-click="ctrl.addTally()"></i>
