--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <add-tally></add-tally>
     <edit-tally></edit-tally>
     <task-timer></task-timer>
-    <!-- <task-data></task-data> -->
+    <task-data></task-data>
 
     <div class="header" ng-controller="headerCtrl as ctrl">
       <h1>25</h1>
