--- a/public/directives/tally.html
+++ b/public/directives/tally.html
@@ -1,8 +1,8 @@
 <div class="tally" ng-class="data.color">
   <i class="fa fa-info-circle" aria-hidden="true" ng-click="singleCtrl.showInfo(data._id)"></i>
   <div class="info" ng-if="singleCtrl.showingInfo[data._id]">
-    <i class="fa fa-clock-o" aria-hidden="true" ng-click=singleCtrl.showTimer(data)></i>
-    <i class="fa fa-bar-chart" aria-hidden="true"></i>
+    <i class="fa fa-clock-o" aria-hidden="true" ng-click="singleCtrl.showTimer(data)"></i>
+    <i class="fa fa-bar-chart" aria-hidden="true" ng-click="singleCtrl.showData(data)"></i>
     <i class="fa fa-pencil" aria-hidden="true" ng-click="singleCtrl.editTally(data)"></i>
   </div>
   <h2>{{data.task}}</h2>
