--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,19 @@
     <task-timer></task-timer>
     <task-data></task-data>
 
+    <div class="login">
+      <button>Login</button>
+      <div class="auth-form">
+        <div class="arrow"></div>
+        <form>
+          <input type="text" placeholder="Username">
+          <input type="text" placeholder="Password">
+          <button type="submit">Go</button>
+        </form>
+        <span class="switch-auth"><span>Register</span> instead</span>
+      </div>
+    </div>
+
     <div class="header" ng-controller="headerCtrl as ctrl">
       <h1>25</h1>
       <i class="fa fa-plus-square" aria-hidden="true" ng-click="ctrl.addTally()"></i>
