--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/controllers/auth-controllers.js"></script>
+    <script src="js/controllers/main-controllers.js"></script>
+    <script src="js/controllers/tally-controllers.js"></script>
     <script src="js/factories.js"></script>
 
   </body>
