split factories into separate files

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
     <script src="js/controllers/auth-controllers.js"></script>
     <script src="js/controllers/main-controllers.js"></script>
     <script src="js/controllers/tally-controllers.js"></script>
-    <script src="js/factories.js"></script>
+    <script src="js/factories/auth-factory.js"></script>
+    <script src="js/factories/task-factories.js"></script>
+    <script src="js/factories/helper-factories.js"></script>
 
   </body>
 </html>
