--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
 
     <div class="login" ng-controller="authCtrl as authCtrl">
       <button ng-click="authCtrl.loginLogout()">{{authCtrl.buttonText}}</button>
-      <login></login>
-      <register></register>
+      <div class="auth-form" ng-if="authCtrl.showing">
+        <login></login>
+        <register></register>
+      </div>
     </div>
 
     <div class="header" ng-controller="headerCtrl as ctrl">
