--- a/public/directives/taskdata.html
+++ b/public/directives/taskdata.html
@@ -13,7 +13,7 @@
     </div>
     <span><strong>{{dataCtrl.totalCat}} total:</strong> {{dataCtrl.rangeTally}}</span>
     <span><strong>{{dataCtrl.totalCat}} total time:</strong> {{dataCtrl.rangeTime}}</span>
-    <div class="graph" ng-class="{'monthly':dataCtrl.monthView}">
+    <div class="graph" ng-class="{'monthly':dataCtrl.selected.month, 'weekly': dataCtrl.selected.week}">
       <div class="bars">
         <div class="bar" ng-repeat="bar in dataCtrl.bars" ng-style="{height: bar.height, width: bar.width}">
           <span ng-if="bar.tally > 0">{{bar.tally}}</span>
