--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body ng-app="tally25">
+  <body ng-app="tally25" ng-cloak>
 
     <add-tally></add-tally>
     <edit-tally></edit-tally>
