--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,6 @@
     </div>
 
     <div ui-view></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers/auth-controllers.js"></script>
-    <script src="js/controllers/main-controllers.js"></script>
-    <script src="js/controllers/tally-controllers.js"></script>
-    <script src="js/factories/auth-factory.js"></script>
-    <script src="js/factories/task-factories.js"></script>
-    <script src="js/factories/helper-factories.js"></script>
-
+    <script src="bundle.js"></script>
   </body>
 </html>
